test/2-errors/quo-bare.test
{
  'code' : 1,
  'err' : '''\
test/2-errors/quo-bare.ploy:1:2: parse error: expected sub-expression
    `
     ^
'''
}
